Upload RNN and output files

--- a/lyric_data_processing.ipynb
+++ b/lyric_data_processing.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +203,8 @@
     "# Tokenize the sequences\n",
     "df['ph_seq'] = df['ph_seq'].apply(lambda x: x.split())\n",
     "df['note_seq'] = df['note_seq'].apply(lambda x: x.split())\n",
+    "df['ph_dur'] = df['ph_dur'].apply(lambda x: [float(i) for i in x.split()])\n",
+    "df['f0_seq'] = df['f0_seq'].apply(lambda x: [float(i) for i in x.split()] if isinstance(x, str) else x)\n",
     "\n",
     "# Get unique tokens and create a mapping to integers for ph_seq\n",
     "unique_ph_tokens = set(token for seq in df['ph_seq'] for token in seq)\n",
@@ -225,7 +227,7 @@
     "df['note_seq_encoded'] = df['note_seq'].apply(lambda seq: [note_token_to_int[token] for token in seq])\n",
     "\n",
     "# Optional: Drop the original ph_seq and note_seq columns if you no longer need them\n",
-    "df.drop(['ph_seq', 'note_seq'], axis=1, inplace=True)\n",
+    "df.drop(['ph_seq', 'note_seq', 'offset', 'f0_timestep'], axis=1, inplace=True)\n",
     "\n",
     "df.to_csv(norm_output_path, index=False)"
    ]
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
