update output of rnn, run self-supervised rnn

--- a/model_training_RNN_self_supervise.ipynb
+++ b/model_training_RNN_self_supervise.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "import ast\n",
+    "import gc\n",
     "\n",
     "file_path = 'normalized_output.csv'"
    ]
@@ -45,9 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Niko\\anaconda3\\envs\\ProjectVivy\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (4022, 4450, 65)\n",
+      "y_ph_dur shape: (4022, 4450, 1)\n",
+      "y_note_seq_encoded shape: (4022, 4450, 56)\n",
+      "y_f0_seq shape: (4022, 4450, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data\n",
     "data = pd.read_csv(file_path)\n",
@@ -86,6 +106,7 @@
     "\n",
     "# Convert to numpy array and reshape to be 2D\n",
     "all_ph_seq_array = np.array(all_ph_seq).reshape(-1, 1)\n",
+    "all_ph_seq.clear()\n",
     "\n",
     "# Initialize and fit the OneHotEncoder on all sequences at once\n",
     "encoder = OneHotEncoder(sparse=False)\n",
@@ -108,15 +129,77 @@
     "y_ph_dur = np.array(data['ph_dur'].tolist())\n",
     "y_note_seq_encoded = np.array(data['note_seq_encoded'].tolist())\n",
     "\n",
+    "# Ensure that all arrays have three dimensions\n",
+    "y_ph_dur = y_ph_dur[..., np.newaxis]  # shape (num_sequences, sequence_length, 1)\n",
+    "\n",
     "# Handle missing f0_seq data\n",
     "mask_value = -1  # Define a mask value that does not appear in the data\n",
-    "data['f0_seq'] = np.array([np.full(max_sequence_length, mask_value) if np.isnan(seq).all() else seq for seq in data['f0_seq']])\n",
-    "y_f0_seq = np.array(data['f0_seq'].tolist())\n",
+    "y_f0_seq = np.array([np.full(max_sequence_length, mask_value) if np.isnan(seq).all() else seq for seq in data['f0_seq']])\n",
     "\n",
-    "# Split the data into training and test sets\n",
-    "X_train, X_test, y_ph_dur_train, y_ph_dur_test, y_f0_seq_train, y_f0_seq_test, y_note_seq_encoded_train, y_note_seq_encoded_test = train_test_split(\n",
-    "    X, y_ph_dur, y_f0_seq, y_note_seq_encoded, test_size=0.2, random_state=42\n",
-    ")"
+    "# If y_f0_seq is 2D, also convert it to 3D\n",
+    "if y_f0_seq.ndim == 2:\n",
+    "    y_f0_seq = y_f0_seq[..., np.newaxis]  # shape (num_sequences, sequence_length, 1)\n",
+    "\n",
+    "# Check the shapes of the arrays to make sure they are all 3D and can be concatenated\n",
+    "print(f\"X shape: {X.shape}\")\n",
+    "print(f\"y_ph_dur shape: {y_ph_dur.shape}\")\n",
+    "print(f\"y_note_seq_encoded shape: {y_note_seq_encoded.shape}\")\n",
+    "print(f\"y_f0_seq shape: {y_f0_seq.shape}\")\n",
+    "\n",
+    "# Concatenate your inputs along the last axis to create a single input array for each sequence\n",
+    "X_combined = np.concatenate([X, y_ph_dur, y_note_seq_encoded, y_f0_seq], axis=-1)\n",
+    "\n",
+    "\n",
+    "# Shift the combined input to create the input and target pairs\n",
+    "X_input = X_combined[:, :-1, :]  # All but the last time step\n",
+    "X_target = X_combined[:, 1:, :]  # All but the first time step\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         1.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.07759133\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         1.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.37810651]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Free some memory here\n",
+    "del all_ph_seq_array\n",
+    "del padded_note_seqs\n",
+    "del all_ph_seq\n",
+    "del data\n",
+    "del X\n",
+    "del y_f0_seq\n",
+    "del y_ph_dur\n",
+    "del y_note_seq_encoded\n",
+    "del X_combined\n",
+    "gc.collect()"
    ]
   },
   {
@@ -128,42 +211,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From c:\\Users\\Niko\\anaconda3\\envs\\ProjectVivy\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Niko\\anaconda3\\envs\\ProjectVivy\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      " 1/63 [..............................] - ETA: 35:50 - loss: 5.3748 - accuracy: 6.6728e-05"
+     ]
+    }
+   ],
    "source": [
-    "# Define the model with input layer and output layers\n",
-    "input_layer = Input(shape=(X_train.shape[1], X_train.shape[2]))\n",
+    "# Model architecture\n",
+    "input_layer = Input(shape=(X_input.shape[1], X_input.shape[2]))\n",
     "lstm_layer = LSTM(128, return_sequences=True)(input_layer)\n",
+    "output_layer = Dense(X_input.shape[2], activation='softmax')(lstm_layer)\n",
     "\n",
-    "# Output layers for each prediction\n",
-    "ph_dur_output = Dense(1, activation='linear', name='ph_dur_output')(lstm_layer)\n",
-    "f0_seq_output = Dense(1, activation='linear', name='f0_seq_output')(lstm_layer)\n",
-    "note_seq_output = Dense(y_note_seq_encoded_train.shape[2], activation='softmax', name='note_seq_output')(lstm_layer)\n",
+    "model = Model(inputs=input_layer, outputs=output_layer)\n",
+    "model.compile(optimizer=Adam(learning_rate=0.001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model = Model(inputs=input_layer, outputs=[ph_dur_output, f0_seq_output, note_seq_output])\n",
+    "# Train the model on the input and target sequences\n",
+    "model.fit(X_input, X_target, epochs=10, batch_size=64)\n",
     "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer=Adam(learning_rate=0.001), loss={'ph_dur_output': 'mse', 'f0_seq_output': 'mse', 'note_seq_output': 'categorical_crossentropy'}, metrics=['accuracy'])\n",
-    "\n",
-    "# Make sure your target arrays are in the correct shape before training\n",
-    "y_note_seq_encoded_train = np.array([np.array(lst) if isinstance(lst, list) else lst for lst in y_note_seq_encoded_train])\n",
-    "# Add an extra dimension to ph_dur and f0_seq if they are not already in the shape (num_samples, 1)\n",
-    "# y_ph_dur_train = np.expand_dims(y_ph_dur_train, axis=-1)\n",
-    "# y_f0_seq_train = np.expand_dims(y_f0_seq_train, axis=-1)\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(X_train, [y_ph_dur_train, y_f0_seq_train, y_note_seq_encoded_train], epochs=10, batch_size=64, validation_split=0.2)\n",
-    "\n",
-    "# Save the model and the scalers/encoders\n",
-    "model.save('model.h5')\n",
+    "# Save the model\n",
+    "model.save('model_self_supervised.h5')\n",
     "\n",
     "import joblib\n",
     "\n",
-    "# Save the scalers and encoders\n",
-    "joblib.dump(scaler_ph_dur, 'scaler_ph_dur.pkl')\n",
-    "joblib.dump(scaler_f0_seq, 'scaler_f0_seq.pkl')\n",
-    "joblib.dump(encoder, 'ph_seq_encoder.pkl')"
+    "# # Save the scalers and encoders\n",
+    "# joblib.dump(scaler_ph_dur, 'scaler_ph_dur.pkl')\n",
+    "# joblib.dump(scaler_f0_seq, 'scaler_f0_seq.pkl')\n",
+    "# joblib.dump(encoder, 'ph_seq_encoder.pkl')"
    ]
   },
   {
@@ -380,23 +464,15 @@
     "decoded_note_seq = decode_predictions(predicted_note_seq_integers, note_int_to_token)\n",
     "\n",
     "# Print or return the decoded sequences\n",
-    "# print(\"Decoded Phonetic Sequence:\", input_phonemes)\n",
-    "# print(\"Decoded Note Sequence:\", decoded_note_seq)\n",
-    "\n",
-    "ph_dur = ' '.join(map(str, decoded_ph_dur_no_zeros))\n",
-    "note_seq = ' '.join(map(str, decoded_note_seq))\n",
-    "f0_seq = ' '.join(map(str, decoded_f0_seq_no_zeros))\n",
+    "print(\"Decoded Phonetic Sequence:\", input_phonemes)\n",
+    "print(\"Decoded Note Sequence:\", decoded_note_seq)\n",
     "\n",
     "file = {\n",
-    "    'ph_seq': input_sequence,\n",
-    "    'ph_dur': ph_dur,\n",
-    "    'note_seq': note_seq,\n",
-    "    'f0_seq': f0_seq,\n",
-    "    'f0_timestep': f0_timestep\n",
-    "}\n",
-    "\n",
-    "with open('rnn_output.ds', 'w') as json_file:\n",
-    "    json.dump(file, json_file, indent=4)"
+    "    'ph_seq': input_phonemes,\n",
+    "    'ph_dur': decoded_ph_dur_no_zeros,\n",
+    "    'note_seq': decoded_note_seq,\n",
+    "    'f0_seq': decoded_f0_seq_no_zeros\n",
+    "}\n"
    ]
   }
  ],
