--- a/model_training_RNN.ipynb
+++ b/model_training_RNN.ipynb
@@ -16,22 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import Input, LSTM, Dense, Masking\n",
+    "from tensorflow.keras.layers import Input, LSTM, Dense\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "\n",
-    "import ast\n",
     "\n",
     "file_path = 'normalized_output.csv'"
    ]
@@ -40,83 +35,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Data extraction"
+    "# 2. Data Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
-    "# Convert string representations of lists to actual lists\n",
-    "data['ph_seq_encoded'] = data['ph_seq_encoded'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
-    "data['ph_dur'] = data['ph_dur'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
-    "data['f0_seq'] = data['f0_seq'].apply(lambda x: ast.literal_eval(x) if pd.notnull(x) else x)  # Handle NaN for f0_seq\n",
-    "data['note_seq_encoded'] = data['note_seq_encoded'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "# Function to convert string representation of a list to an actual list\n",
+    "def convert_string_to_list(string):\n",
+    "    return np.fromstring(string[1:-1], sep=',')  # Assumes the format \"[1, 2, 3]\"\n",
     "\n",
-    "# Normalize the float arrays\n",
-    "scaler_ph_dur = MinMaxScaler(feature_range=(0, 1))\n",
-    "# Normalize ph_dur assuming they are already in the correct format\n",
-    "data['ph_dur'] = [scaler_ph_dur.fit_transform(np.array(seq).reshape(-1, 1)).flatten() for seq in data['ph_dur']]\n",
+    "# Assuming 'ph_seq_encoded' and 'note_seq_encoded' are strings representing lists\n",
+    "X = np.array([convert_string_to_list(row) for row in data['ph_seq_encoded']])\n",
+    "y_note = np.array([convert_string_to_list(row) for row in data['note_seq_encoded']])\n",
+    "y_dur = np.array([convert_string_to_list(row) for row in data['ph_dur']])\n",
     "\n",
-    "# Only normalize f0_seq if it's not NaN\n",
-    "scaler_f0_seq = MinMaxScaler(feature_range=(0, 1))\n",
-    "data['f0_seq'] = [scaler_f0_seq.fit_transform(np.array(seq).reshape(-1, 1)).flatten() if seq is not np.nan else np.nan for seq in data['f0_seq']]\n",
+    "# Reshape the arrays\n",
+    "X_reshaped = X.reshape((X.shape[0], X.shape[1], 1))\n",
+    "y_note_reshaped = y_note.reshape((y_note.shape[0], y_note.shape[1], 1))\n",
+    "y_dur_reshaped = y_dur.reshape((y_dur.shape[0], y_dur.shape[1], 1))\n",
     "\n",
-    "# Find the maximum sequence length across all sequence columns\n",
-    "max_sequence_length = max(\n",
-    "    max(data['ph_seq_encoded'].apply(len)),\n",
-    "    max(data['ph_dur'].apply(len)),\n",
-    "    max([len(seq) for seq in data['f0_seq'] if seq is not np.nan]),  # Only consider non-NaN sequences\n",
-    "    max(data['note_seq_encoded'].apply(len))\n",
-    ")\n",
-    "\n",
-    "# Pad the sequences\n",
-    "data['ph_seq_encoded'] = pad_sequences(data['ph_seq_encoded'], maxlen=max_sequence_length, padding='post').tolist()\n",
-    "data['ph_dur'] = pad_sequences(data['ph_dur'], maxlen=max_sequence_length, padding='post', dtype='float').tolist()\n",
-    "data['f0_seq'] = [pad_sequences([seq], maxlen=max_sequence_length, padding='post', dtype='float').flatten() if seq is not np.nan else np.full(max_sequence_length, np.nan) for seq in data['f0_seq']]\n",
-    "data['note_seq_encoded'] = pad_sequences(data['note_seq_encoded'], maxlen=max_sequence_length, padding='post').tolist()\n",
-    "\n",
-    "# Flatten all sequences into a single list\n",
-    "all_ph_seq = [item for sublist in data['ph_seq_encoded'] for item in sublist]\n",
-    "\n",
-    "# Convert to numpy array and reshape to be 2D\n",
-    "all_ph_seq_array = np.array(all_ph_seq).reshape(-1, 1)\n",
-    "\n",
-    "# Initialize and fit the OneHotEncoder on all sequences at once\n",
-    "encoder = OneHotEncoder(sparse=False)\n",
-    "encoder.fit(all_ph_seq_array)\n",
-    "\n",
-    "# Now transform each sequence individually and store the transformed arrays\n",
-    "data['ph_seq_encoded'] = [encoder.transform(np.array(seq).reshape(-1, 1)) for seq in data['ph_seq_encoded']]\n",
-    "\n",
-    "# Determine the number of categories for notes\n",
-    "num_note_categories = max(data['note_seq_encoded'].apply(max)) + 1  # Assuming the sequences are zero-indexed\n",
-    "\n",
-    "# One-hot encode the note_seq_encoded\n",
-    "data['note_seq_encoded'] = [to_categorical(seq, num_classes=num_note_categories) for seq in data['note_seq_encoded']]\n",
-    "\n",
-    "padded_note_seqs = np.array([pad_sequences([seq], maxlen=max_sequence_length, padding='post', value=0)[0] for seq in data['note_seq_encoded']])\n",
-    "data['note_seq_encoded'] = list(padded_note_seqs)\n",
-    "\n",
-    "# After padding and encoding, convert to a numpy array\n",
-    "X = np.array(data['ph_seq_encoded'].tolist())\n",
-    "y_ph_dur = np.array(data['ph_dur'].tolist())\n",
-    "y_note_seq_encoded = np.array(data['note_seq_encoded'].tolist())\n",
-    "\n",
-    "# Handle missing f0_seq data\n",
-    "mask_value = -1  # Define a mask value that does not appear in the data\n",
-    "data['f0_seq'] = np.array([np.full(max_sequence_length, mask_value) if np.isnan(seq).all() else seq for seq in data['f0_seq']])\n",
-    "y_f0_seq = np.array(data['f0_seq'].tolist())\n",
+    "# print(X_reshaped[0].dtype, y_note_reshaped[0].dtype, y_dur_reshaped[0].dtype)\n",
     "\n",
     "# Split the data into training and test sets\n",
-    "X_train, X_test, y_ph_dur_train, y_ph_dur_test, y_f0_seq_train, y_f0_seq_test, y_note_seq_encoded_train, y_note_seq_encoded_test = train_test_split(\n",
-    "    X, y_ph_dur, y_f0_seq, y_note_seq_encoded, test_size=0.2, random_state=42\n",
-    ")"
+    "X_train, X_test, y_note_train, y_note_test, y_dur_train, y_dur_test = train_test_split(\n",
+    "    X_reshaped, y_note_reshaped, y_note_reshaped, test_size=0.3, random_state=42)"
    ]
   },
   {
@@ -128,42 +77,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "36/36 [==============================] - 12s 241ms/step - loss: 1091.4835 - val_loss: 1069.4875\n",
+      "Epoch 2/20\n",
+      "36/36 [==============================] - 8s 210ms/step - loss: 1078.5050 - val_loss: 1067.8865\n",
+      "Epoch 3/20\n",
+      "36/36 [==============================] - 7s 204ms/step - loss: 1077.9226 - val_loss: 1067.7307\n",
+      "Epoch 4/20\n",
+      "36/36 [==============================] - 7s 199ms/step - loss: 1077.8335 - val_loss: 1067.6792\n",
+      "Epoch 5/20\n",
+      "36/36 [==============================] - 7s 208ms/step - loss: 1077.7944 - val_loss: 1067.6503\n",
+      "Epoch 6/20\n",
+      "36/36 [==============================] - 8s 210ms/step - loss: 1077.7708 - val_loss: 1067.6305\n",
+      "Epoch 7/20\n",
+      "36/36 [==============================] - 7s 203ms/step - loss: 1077.7532 - val_loss: 1067.6158\n",
+      "Epoch 8/20\n",
+      "36/36 [==============================] - 7s 203ms/step - loss: 1077.7401 - val_loss: 1067.6041\n",
+      "Epoch 9/20\n",
+      "36/36 [==============================] - 7s 208ms/step - loss: 1077.7300 - val_loss: 1067.5959\n",
+      "Epoch 10/20\n",
+      "36/36 [==============================] - 8s 210ms/step - loss: 1077.7225 - val_loss: 1067.5894\n",
+      "Epoch 11/20\n",
+      "36/36 [==============================] - 8s 209ms/step - loss: 1077.7166 - val_loss: 1067.5841\n",
+      "Epoch 12/20\n",
+      "36/36 [==============================] - 7s 207ms/step - loss: 1077.7119 - val_loss: 1067.5802\n",
+      "Epoch 13/20\n",
+      "36/36 [==============================] - 8s 212ms/step - loss: 1077.7081 - val_loss: 1067.5769\n",
+      "Epoch 14/20\n",
+      "36/36 [==============================] - 8s 212ms/step - loss: 1077.7054 - val_loss: 1067.5747\n",
+      "Epoch 15/20\n",
+      "36/36 [==============================] - 8s 216ms/step - loss: 1077.7032 - val_loss: 1067.5726\n",
+      "Epoch 16/20\n",
+      "36/36 [==============================] - 8s 214ms/step - loss: 1077.7014 - val_loss: 1067.5707\n",
+      "Epoch 17/20\n",
+      "36/36 [==============================] - 7s 204ms/step - loss: 1077.7000 - val_loss: 1067.5695\n",
+      "Epoch 18/20\n",
+      "36/36 [==============================] - 10s 269ms/step - loss: 1077.6986 - val_loss: 1067.5684\n",
+      "Epoch 19/20\n",
+      "36/36 [==============================] - 13s 344ms/step - loss: 1077.6976 - val_loss: 1067.5675\n",
+      "Epoch 20/20\n",
+      "36/36 [==============================] - 7s 198ms/step - loss: 1077.6970 - val_loss: 1067.5667\n",
+      "38/38 [==============================] - 2s 53ms/step - loss: 1075.9373\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input layer\n",
+    "input_layer = Input(shape=(X_train.shape[1], X_train.shape[2]))\n",
+    "\n",
+    "# LSTM layers\n",
+    "lstm1 = LSTM(64, return_sequences=True)(input_layer)\n",
+    "lstm2 = LSTM(32, return_sequences=True)(lstm1)\n",
+    "\n",
+    "# Output layers\n",
+    "y_note_output = Dense(10, activation='relu')(lstm2)\n",
+    "y_note_output = Dense(1, activation='sigmoid', name='y_note_output')(y_note_output)\n",
+    "\n",
+    "y_dur_output = Dense(10, activation='relu')(lstm2)\n",
+    "y_dur_output = Dense(1, activation='sigmoid', name='y_dur_output')(y_dur_output)\n",
+    "\n",
+    "# Building the model\n",
+    "model = Model(inputs=input_layer, outputs=[y_note_output, y_dur_output])\n",
+    "\n",
+    "# Compiling the model\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "# Training the model\n",
+    "history = model.fit(X_train, [y_note_train, y_dur_train], epochs=10, batch_size=64, validation_split=0.2)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_loss = model.evaluate(X_test, [y_note_test, y_dur_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the model with input layer and output layers\n",
-    "input_layer = Input(shape=(X_train.shape[1], X_train.shape[2]))\n",
-    "lstm_layer = LSTM(128, return_sequences=True)(input_layer)\n",
-    "\n",
-    "# Output layers for each prediction\n",
-    "ph_dur_output = Dense(1, activation='linear', name='ph_dur_output')(lstm_layer)\n",
-    "f0_seq_output = Dense(1, activation='linear', name='f0_seq_output')(lstm_layer)\n",
-    "note_seq_output = Dense(y_note_seq_encoded_train.shape[2], activation='softmax', name='note_seq_output')(lstm_layer)\n",
-    "\n",
-    "model = Model(inputs=input_layer, outputs=[ph_dur_output, f0_seq_output, note_seq_output])\n",
-    "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer=Adam(learning_rate=0.001), loss={'ph_dur_output': 'mse', 'f0_seq_output': 'mse', 'note_seq_output': 'categorical_crossentropy'}, metrics=['accuracy'])\n",
-    "\n",
-    "# Make sure your target arrays are in the correct shape before training\n",
-    "y_note_seq_encoded_train = np.array([np.array(lst) if isinstance(lst, list) else lst for lst in y_note_seq_encoded_train])\n",
-    "# Add an extra dimension to ph_dur and f0_seq if they are not already in the shape (num_samples, 1)\n",
-    "# y_ph_dur_train = np.expand_dims(y_ph_dur_train, axis=-1)\n",
-    "# y_f0_seq_train = np.expand_dims(y_f0_seq_train, axis=-1)\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(X_train, [y_ph_dur_train, y_f0_seq_train, y_note_seq_encoded_train], epochs=10, batch_size=64, validation_split=0.2)\n",
-    "\n",
-    "# Save the model and the scalers/encoders\n",
-    "model.save('model.h5')\n",
-    "\n",
-    "import joblib\n",
-    "\n",
-    "# Save the scalers and encoders\n",
-    "joblib.dump(scaler_ph_dur, 'scaler_ph_dur.pkl')\n",
-    "joblib.dump(scaler_f0_seq, 'scaler_f0_seq.pkl')\n",
-    "joblib.dump(encoder, 'ph_seq_encoder.pkl')"
+    "# Save the model\n",
+    "model.save('model.h5')"
    ]
   },
   {
@@ -183,11 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
     "# Load the encoding dictionary from the ph_token_to_int.json file\n",
     "with open('ph_token_to_int.json', 'r') as file:\n",
@@ -203,10 +204,9 @@
     "encoded_sequence = [ph_token_to_int[phoneme] for phoneme in input_phonemes]\n",
     "\n",
     "# Convert the sequence to a numpy array and pad it to the right length\n",
-    "new_ph_seq_encoded = np.array([encoded_sequence])  # wrapping in a list to create a batch dimension\n",
-    "new_ph_seq_encoded_padded = pad_sequences(new_ph_seq_encoded, maxlen=max_sequence_length, padding='post')\n",
+    "ph_seq_encoded = np.array([encoded_sequence]) \n",
     "\n",
-    "print(encoded_sequence)\n"
+    "user_input = pad_sequences(ph_seq_encoded, maxlen=283, padding='post', truncating='post', dtype='float64')\n"
    ]
   },
   {
@@ -218,11 +218,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 799ms/step\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Niko\\Documents\\GitHub\\Song-Generation-Model-with-Vocal-Project-Vivy\\model_training_RNN.ipynb 单元格 13\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Prediction\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m y_note_pred, y_dur_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(user_input)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(X_train\u001b[39m.\u001b[39mshape, y_note_train\u001b[39m.\u001b[39mshape)\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
    "source": [
-    "predictions = model.predict(user_input_padded)\n"
+    "# Prediction\n",
+    "y_note_pred, y_dur_pred = model.predict(user_input)\n",
+    "print(X_train.shape, y_note_train.shape)"
    ]
   },
   {
@@ -248,8 +269,6 @@
     "\n",
     "# Reshape it back to the original shape if needed\n",
     "decoded_ph_dur = decoded_ph_dur_2d.reshape(-1, max_sequence_length)\n",
-    "\n",
-    "\n",
     "\n",
     "predicted_f0_seq_2d = predicted_f0_seq.reshape(-1, 1)\n",
     "\n",
