Update RNN model

--- a/model_training_RNN.ipynb
+++ b/model_training_RNN.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,54 +77,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "36/36 [==============================] - 12s 241ms/step - loss: 1091.4835 - val_loss: 1069.4875\n",
-      "Epoch 2/20\n",
-      "36/36 [==============================] - 8s 210ms/step - loss: 1078.5050 - val_loss: 1067.8865\n",
-      "Epoch 3/20\n",
-      "36/36 [==============================] - 7s 204ms/step - loss: 1077.9226 - val_loss: 1067.7307\n",
-      "Epoch 4/20\n",
-      "36/36 [==============================] - 7s 199ms/step - loss: 1077.8335 - val_loss: 1067.6792\n",
-      "Epoch 5/20\n",
-      "36/36 [==============================] - 7s 208ms/step - loss: 1077.7944 - val_loss: 1067.6503\n",
-      "Epoch 6/20\n",
-      "36/36 [==============================] - 8s 210ms/step - loss: 1077.7708 - val_loss: 1067.6305\n",
-      "Epoch 7/20\n",
-      "36/36 [==============================] - 7s 203ms/step - loss: 1077.7532 - val_loss: 1067.6158\n",
-      "Epoch 8/20\n",
-      "36/36 [==============================] - 7s 203ms/step - loss: 1077.7401 - val_loss: 1067.6041\n",
-      "Epoch 9/20\n",
-      "36/36 [==============================] - 7s 208ms/step - loss: 1077.7300 - val_loss: 1067.5959\n",
-      "Epoch 10/20\n",
-      "36/36 [==============================] - 8s 210ms/step - loss: 1077.7225 - val_loss: 1067.5894\n",
-      "Epoch 11/20\n",
-      "36/36 [==============================] - 8s 209ms/step - loss: 1077.7166 - val_loss: 1067.5841\n",
-      "Epoch 12/20\n",
-      "36/36 [==============================] - 7s 207ms/step - loss: 1077.7119 - val_loss: 1067.5802\n",
-      "Epoch 13/20\n",
-      "36/36 [==============================] - 8s 212ms/step - loss: 1077.7081 - val_loss: 1067.5769\n",
-      "Epoch 14/20\n",
-      "36/36 [==============================] - 8s 212ms/step - loss: 1077.7054 - val_loss: 1067.5747\n",
-      "Epoch 15/20\n",
-      "36/36 [==============================] - 8s 216ms/step - loss: 1077.7032 - val_loss: 1067.5726\n",
-      "Epoch 16/20\n",
-      "36/36 [==============================] - 8s 214ms/step - loss: 1077.7014 - val_loss: 1067.5707\n",
-      "Epoch 17/20\n",
-      "36/36 [==============================] - 7s 204ms/step - loss: 1077.7000 - val_loss: 1067.5695\n",
-      "Epoch 18/20\n",
-      "36/36 [==============================] - 10s 269ms/step - loss: 1077.6986 - val_loss: 1067.5684\n",
-      "Epoch 19/20\n",
-      "36/36 [==============================] - 13s 344ms/step - loss: 1077.6976 - val_loss: 1067.5675\n",
-      "Epoch 20/20\n",
-      "36/36 [==============================] - 7s 198ms/step - loss: 1077.6970 - val_loss: 1067.5667\n",
-      "38/38 [==============================] - 2s 53ms/step - loss: 1075.9373\n"
+      "Epoch 1/10\n",
+      "36/36 [==============================] - 12s 226ms/step - loss: 0.0586 - y_note_output_loss: 0.0270 - y_dur_output_loss: 0.0317 - val_loss: 0.0297 - val_y_note_output_loss: 0.0147 - val_y_dur_output_loss: 0.0150\n",
+      "Epoch 2/10\n",
+      "36/36 [==============================] - 7s 206ms/step - loss: 0.0311 - y_note_output_loss: 0.0155 - y_dur_output_loss: 0.0156 - val_loss: 0.0292 - val_y_note_output_loss: 0.0146 - val_y_dur_output_loss: 0.0146\n",
+      "Epoch 3/10\n",
+      "36/36 [==============================] - 7s 202ms/step - loss: 0.0309 - y_note_output_loss: 0.0154 - y_dur_output_loss: 0.0155 - val_loss: 0.0289 - val_y_note_output_loss: 0.0144 - val_y_dur_output_loss: 0.0145\n",
+      "Epoch 4/10\n",
+      "36/36 [==============================] - 7s 204ms/step - loss: 0.0307 - y_note_output_loss: 0.0153 - y_dur_output_loss: 0.0154 - val_loss: 0.0286 - val_y_note_output_loss: 0.0143 - val_y_dur_output_loss: 0.0144\n",
+      "Epoch 5/10\n",
+      "36/36 [==============================] - 7s 196ms/step - loss: 0.0305 - y_note_output_loss: 0.0152 - y_dur_output_loss: 0.0153 - val_loss: 0.0284 - val_y_note_output_loss: 0.0141 - val_y_dur_output_loss: 0.0142\n",
+      "Epoch 6/10\n",
+      "36/36 [==============================] - 7s 207ms/step - loss: 0.0303 - y_note_output_loss: 0.0151 - y_dur_output_loss: 0.0152 - val_loss: 0.0281 - val_y_note_output_loss: 0.0140 - val_y_dur_output_loss: 0.0141\n",
+      "Epoch 7/10\n",
+      "36/36 [==============================] - 9s 238ms/step - loss: 0.0301 - y_note_output_loss: 0.0150 - y_dur_output_loss: 0.0151 - val_loss: 0.0281 - val_y_note_output_loss: 0.0140 - val_y_dur_output_loss: 0.0141\n",
+      "Epoch 8/10\n",
+      "36/36 [==============================] - 8s 228ms/step - loss: 0.0299 - y_note_output_loss: 0.0148 - y_dur_output_loss: 0.0150 - val_loss: 0.0278 - val_y_note_output_loss: 0.0138 - val_y_dur_output_loss: 0.0140\n",
+      "Epoch 9/10\n",
+      "36/36 [==============================] - 8s 217ms/step - loss: 0.0298 - y_note_output_loss: 0.0148 - y_dur_output_loss: 0.0150 - val_loss: 0.0277 - val_y_note_output_loss: 0.0137 - val_y_dur_output_loss: 0.0140\n",
+      "Epoch 10/10\n",
+      "36/36 [==============================] - 8s 221ms/step - loss: 0.0297 - y_note_output_loss: 0.0148 - y_dur_output_loss: 0.0149 - val_loss: 0.0276 - val_y_note_output_loss: 0.0137 - val_y_dur_output_loss: 0.0139\n",
+      "38/38 [==============================] - 2s 58ms/step - loss: 0.0312 - y_note_output_loss: 0.0156 - y_dur_output_loss: 0.0157\n"
      ]
     }
    ],
@@ -183,18 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import joblib\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
     "# Load the encoding dictionary from the ph_token_to_int.json file\n",
     "with open('ph_token_to_int.json', 'r') as file:\n",
     "    ph_token_to_int = json.load(file)\n",
     "\n",
-    "# Your input sequence\n",
+    "# Input sequence\n",
     "input_sequence = \"AP n ei f a g e n a j i f u y u a p u AP n ei f a g e n a l e y u d ao en AP\"\n",
     "\n",
     "# Split the input sequence into individual phonemes\n",
@@ -218,32 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 799ms/step\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Niko\\Documents\\GitHub\\Song-Generation-Model-with-Vocal-Project-Vivy\\model_training_RNN.ipynb 单元格 13\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Prediction\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m y_note_pred, y_dur_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(user_input)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Niko/Documents/GitHub/Song-Generation-Model-with-Vocal-Project-Vivy/model_training_RNN.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(X_train\u001b[39m.\u001b[39mshape, y_note_train\u001b[39m.\u001b[39mshape)\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "(1, 283, 1) (1, 283, 1)\n"
      ]
     }
    ],
    "source": [
     "# Prediction\n",
     "y_note_pred, y_dur_pred = model.predict(user_input)\n",
-    "print(X_train.shape, y_note_train.shape)"
+    "print(y_note_pred.shape, y_note_pred.shape)"
    ]
   },
   {
@@ -255,130 +226,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.727909\n"
+     ]
+    }
+   ],
    "source": [
-    "predicted_ph_dur, predicted_f0_seq, predicted_note_seq_encoded = predictions\n",
+    "# Resize the result\n",
+    "input_length = len(encoded_sequence)\n",
+    "y_note_pred = y_note_pred[:, :input_length, :]\n",
+    "y_dur_pred = y_dur_pred[:, :input_length, :]\n",
     "\n",
-    "predicted_ph_dur_2d = predicted_ph_dur.reshape(-1, 1)\n",
+    "# print(y_note_pred.shape, y_dur_pred.shape)\n",
     "\n",
-    "# Apply inverse transformation\n",
-    "decoded_ph_dur_2d = scaler_ph_dur.inverse_transform(predicted_ph_dur_2d)\n",
-    "# print(predicted_ph_dur_2d)\n",
+    "# Load the saved scaler\n",
+    "note_scaler = joblib.load('note_scaler.pkl')\n",
     "\n",
-    "# Reshape it back to the original shape if needed\n",
-    "decoded_ph_dur = decoded_ph_dur_2d.reshape(-1, max_sequence_length)\n",
+    "y_note_pred_flattened = y_note_pred.flatten()\n",
     "\n",
-    "predicted_f0_seq_2d = predicted_f0_seq.reshape(-1, 1)\n",
+    "# Inverse transform the predictions\n",
+    "y_note_pred_original = note_scaler.inverse_transform(y_note_pred_flattened.reshape(-1, 1))\n",
     "\n",
-    "# Reverse normalization for 'f0_seq', if it's not all NaNs\n",
-    "if not np.isnan(y_f0_seq_train).all():\n",
-    "    decoded_f0_seq_2d = scaler_f0_seq.inverse_transform(predicted_f0_seq_2d)\n",
-    "else:\n",
-    "    decoded_f0_seq_2d = None  # or a placeholder value if f0_seq was not predicted\n",
-    "    \n",
-    "decoded_f0_seq = decoded_f0_seq_2d.reshape(-1, max_sequence_length)\n",
+    "# Reshape back to the original shape if required\n",
+    "y_note_pred_original = y_note_pred_original_scale.reshape(y_note_pred.shape)\n",
+    "y_note_pred_original = np.round(y_note_pred_original).astype(int)\n",
     "\n",
-    "# Convert predicted probabilities for 'note_seq_encoded' back to category indices\n",
-    "decoded_note_seq_encoded = np.argmax(predicted_note_seq_encoded, axis=-1)  # If the last dimension contains the category probabilities\n",
-    "\n",
-    "# If the decoded sequences are padded, you may want to trim the padding off. For example:\n",
-    "trim_padding = lambda seq, mask: seq[:np.where(seq == mask)[0][0] if np.where(seq == mask)[0].size > 0 else None]\n",
-    "# Now you can trim the padding if your original sequences were padded\n",
-    "decoded_ph_dur_trimmed = [seq[seq != mask_value] for seq in decoded_ph_dur]\n",
-    "if decoded_f0_seq is not None:\n",
-    "    decoded_f0_seq_trimmed = [trim_padding(seq, mask_value) for seq in decoded_f0_seq]\n",
-    "decoded_note_seq_encoded_trimmed = [trim_padding(seq, mask_value) for seq in decoded_note_seq_encoded]\n",
-    "\n",
-    "# Now you can print or return the decoded predictions\n",
-    "print(\"Decoded ph_dur:\", decoded_ph_dur_trimmed)\n",
-    "print(len(decoded_ph_dur_trimmed[0]))\n",
-    "if decoded_f0_seq is not None:\n",
-    "    print(\"Decoded f0_seq:\", decoded_f0_seq_trimmed)\n",
-    "    print(len(decoded_f0_seq_trimmed[0]))\n",
-    "print(\"Decoded note_seq_encoded:\", decoded_note_seq_encoded_trimmed)\n",
-    "print(len(decoded_note_seq_encoded_trimmed[0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4 Removing zeros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "f0_timestep = 0.005\n",
-    "f0_constant = 205.1\n",
-    "def remove_trailing_zeros(sequence):\n",
-    "    # Find the last non-zero element in the sequence\n",
-    "    last_non_zero = -1\n",
-    "    for i in range(len(sequence) - 1, -1, -1):\n",
-    "        if sequence[i] != 0:\n",
-    "            last_non_zero = i\n",
-    "            break\n",
-    "    # Slice the sequence to remove trailing zeros\n",
-    "    return sequence[:last_non_zero + 1] if last_non_zero != -1 else sequence\n",
+    "f0_seq_constant = 250.1\n",
     "\n",
-    "# Apply this function to each of your predicted sequences\n",
-    "decoded_ph_dur_no_zeros = remove_trailing_zeros(decoded_ph_dur_trimmed[0])\n",
-    "decoded_f0_seq_no_zeros = remove_trailing_zeros(decoded_f0_seq_trimmed[0])\n",
-    "decoded_note_seq_encoded_no_zeros = remove_trailing_zeros(decoded_note_seq_encoded_trimmed[0])\n",
-    "\n",
-    "if len(decoded_ph_dur_no_zeros) > len(input_phonemes):\n",
-    "        # Truncate the sequence if it's longer\n",
-    "    decoded_ph_dur_no_zeros = decoded_ph_dur_no_zeros[:len(input_phonemes)]\n",
-    "elif len(decoded_ph_dur_no_zeros) < len(input_phonemes):\n",
-    "    # Pad the sequence with zeros if it's shorter\n",
-    "    decoded_ph_dur_no_zeros = np.pad(decoded_ph_dur_no_zeros, (0, len(input_phonemes) - len(decoded_ph_dur_no_zeros)), 'constant')\n",
-    "\n",
-    "total_time = sum(decoded_ph_dur_no_zeros)\n",
-    "\n",
+    "total_time = np.sum(y_dur_pred)\n",
     "print(total_time)\n",
     "f0_size = int(total_time / f0_timestep)\n",
-    "print(f0_size)\n",
-    "# Replace non-positive values with the specified constant\n",
-    "decoded_f0_seq_no_zeros = [x if x > 0 else f0_constant for x in decoded_f0_seq_no_zeros]\n",
+    "# print(f0_size)\n",
     "\n",
-    "# Pad sequence with the constant value if it's shorter than the target length\n",
-    "if len(decoded_f0_seq_no_zeros) < f0_size:\n",
-    "    decoded_f0_seq_no_zeros = np.pad(decoded_f0_seq_no_zeros, (0, f0_size - len(decoded_f0_seq_no_zeros)), 'constant', constant_values=(f0_constant,))\n",
-    "\n",
-    "# Or truncate if it's longer than the target length (just for safety)\n",
-    "elif len(decoded_f0_seq_no_zeros) > f0_size:\n",
-    "    decoded_f0_seq_no_zeros = decoded_f0_seq_no_zeros[:f0_size]\n",
-    "\n",
-    "# Now you have your sequences with trailing zeros removed\n",
-    "print(\"Decoded ph_dur without trailing zeros:\", decoded_ph_dur_no_zeros)\n",
-    "print(len(decoded_ph_dur_no_zeros))\n",
-    "if decoded_f0_seq_no_zeros is not None:\n",
-    "    print(\"Decoded f0_seq without trailing zeros:\", decoded_f0_seq_no_zeros)\n",
-    "    print(len(decoded_f0_seq_no_zeros))\n",
-    "print(\"Decoded note_seq_encoded without trailing zeros:\", decoded_note_seq_encoded_no_zeros)\n",
-    "print(len(decoded_note_seq_encoded_no_zeros))\n",
-    "print(len(input_phonemes))"
+    "f0_seq = [f0_seq_constant] * f0_size\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.5 Make it .ds file"
+    "### 4.4 Make it .ds file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Niko\\AppData\\Local\\Temp\\ipykernel_6804\\3238408921.py:2: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  y_note_pred_output = [int(i) for i in y_note_pred_flattened]\n",
+      "C:\\Users\\Niko\\AppData\\Local\\Temp\\ipykernel_6804\\3238408921.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  y_dur_pred_output = [float(i) for i in y_dur_pred_flattened]\n"
+     ]
+    }
+   ],
    "source": [
-    "# use input_phonemes\n",
+    "y_note_pred_flattened = y_note_pred_original[0]\n",
+    "y_note_pred_output = [int(i) for i in y_note_pred_flattened]\n",
+    "\n",
+    "y_dur_pred_flattened = y_dur_pred[0]\n",
+    "y_dur_pred_output = [float(i) for i in y_dur_pred_flattened]\n",
     "\n",
     "# Load the token-to-int mappings from the JSON files\n",
     "def load_mapping(file_path):\n",
@@ -394,17 +312,15 @@
     "\n",
     "note_int_to_token = load_mapping('note_token_to_int.json')\n",
     "\n",
-    "predicted_note_seq_integers = decoded_note_seq_encoded_no_zeros\n",
-    "\n",
-    "decoded_note_seq = decode_predictions(predicted_note_seq_integers, note_int_to_token)\n",
+    "decoded_note_seq = decode_predictions(y_note_pred_output, note_int_to_token)\n",
     "\n",
     "# Print or return the decoded sequences\n",
     "# print(\"Decoded Phonetic Sequence:\", input_phonemes)\n",
     "# print(\"Decoded Note Sequence:\", decoded_note_seq)\n",
     "\n",
-    "ph_dur = ' '.join(map(str, decoded_ph_dur_no_zeros))\n",
+    "ph_dur = ' '.join(map(str, y_dur_pred_output))\n",
     "note_seq = ' '.join(map(str, decoded_note_seq))\n",
-    "f0_seq = ' '.join(map(str, decoded_f0_seq_no_zeros))\n",
+    "f0_seq = ' '.join(map(str, f0_seq))\n",
     "\n",
     "file = {\n",
     "    'ph_seq': input_sequence,\n",
