add model saving

--- a/model_training_RNN_GRU.ipynb
+++ b/model_training_RNN_GRU.ipynb
@@ -544,7 +544,7 @@
    ],
    "source": [
     "# Save the model\n",
-    "model.save('model_rnn_gru.h5')"
+    "model.save('./models/model_rnn_gru.h5')"
    ]
   },
   {
