--- a/model_training_RNN_LSTM.ipynb
+++ b/model_training_RNN_LSTM.ipynb
@@ -550,7 +550,7 @@
    ],
    "source": [
     "# Save the model\n",
-    "model.save('rnn_model.h5')"
+    "model.save('./models/model_rnn_lstm.h5')"
    ]
   },
   {
