--- a/model_training_Transformer.ipynb
+++ b/model_training_Transformer.ipynb
@@ -571,6 +571,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "model.save('./models/transformer_model.h5')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
