--- a/model_training_LSTM.ipynb
+++ b/model_training_LSTM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Use: *RNN w/ LSTM*"
+    "# Model Use: *LSTM*"
    ]
   },
   {
